frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywallet-frontend-service
spec:
  type: ClusterIP
  selector:
    app: mywallet-frontend
  ports:
  - port: 80
    targetPort: 80
