frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywallet-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mywallet.rayududev.live
    secretName: mywallet-frontend-tls
  rules:
  - host: mywallet.rayududev.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mywallet-frontend-service
            port:
              number: 80
